welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value T
	var tab = new Array[Int] (T.length)
                                  ^indexOfValue:3: error: not found: value T
	for (i <-0 to T.length-1) {
                      ^